SFproject/force-app/main/default/objects/Case/fields/Customer_Case__c.field-meta.xml
<CustomField>
    <fullName>Customer_Case__c</fullName>
    <label>Customer Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>