SFproject/force-app/main/default/objects/Case/validationRules/Mark_as_Escalated.validationRule-meta.xml
<ValidationRule>
    <fullName>Mark_as_Escalated</fullName>
    <active>true</active>
    <errorConditionFormula>IF( IsEscalated , OR(IsClosedOnCreate , 
ISPICKVAL(Status, &quot;Closed&quot;), 
ISPICKVAL(Priority, &quot;Low&quot;), 
ISPICKVAL(Priority, &quot;Medium&quot;)), 
null)</errorConditionFormula>
    <errorDisplayField>IsEscalated</errorDisplayField>
    <errorMessage>You can only set a case as escalated if it is high priority and not closed</errorMessage>
</ValidationRule>