SFproject/force-app/main/default/objects/Case/listViews/CaseQueue_Case.listView-meta.xml
<ListView>
    <fullName>CaseQueue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>CaseQueue</label>
    <queue>CaseQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>